# EEN1095-Electronic-Engineering-Masters-Project

./: .gitignore  README.md
Datasets/: Readme.md
Documents/Templates/: Log of GenAI interactions.doc  Project Meeting Minutes template.docx  Template Project Plan EEN1101.docx  The Literature Search Log.docx
Meeting_Minutes/: Project_Meeting_Minutes_2026.01.19.docx  Project_Meeting_Minutes_2026.02.03.docx  Project_Meeting_Minutes_2026.02.16.docx  Project_Meeting_Minutes_2026.03.04.docx  Project_Meeting_Minutes_2026.03.16.docx  Project_Meeting_Minutes_2026.04.07.docx
Project_Meeting_Minutes/: Project_Meeting_Minutes_2026.01.19.docx  Project_Meeting_Minutes_2026.02.03.docx
References/: referenced_papers.md
Reviews_Research/: Research_Possible_ML_Formulations.md  Research_critical_analysis.md  Review-CircuitNet_Project.md  Review-Demystify_ML_for_SIPI_in_Packageing.md  Review-Physics_Enforced_Modeling_for_IL_by_DNN.md  Review-SI_PI_Database_of_PCB_Based_Interconnects_for_ML.md  Scattering_Parameters.md  meeting_2026.02.03.md
Reviews_and_Researches/: Scattering_Parameters.md  meeting_2026.02.03.md
sparam-surrogate/: Makefile  README.md  environment.yml  pyproject.toml
sparam-surrogate/configs/: default.json  mylogging.json
sparam-surrogate/nbconvert_templates/tight/: index.html.j2
sparam-surrogate/notebooks/: dataset_exploration.py
sparam-surrogate/src/sparam_surrogate/: __init__.py  cli.py  mylogging.py  paths.py
sparam-surrogate/src/sparam_surrogate/config/: __init__.py  basic_cfg.py  mylogging.py  paths.py
sparam-surrogate/src/sparam_surrogate/data/: __init__.py  pcb_dataset_eda.py  pcb_parameters.py  raw_data.py  s_parameter_dataset.py
sparam-surrogate/src/sparam_surrogate/utils/: __init__.py  filesystem.py  unzip.py
sparam-surrogate/tests/: test_basic_cfg.py  test_cli.py  test_paths.py  test_pcb_dataset_eda.py  test_pcb_parameters.py  test_raw_data.py  test_s_parameter_dataset.py  test_util_filesystem.py  test_util_unzip.py
